omxmycodecdir = $(BELLAGIO_PLUGINSDIR)

omxmycodec_LTLIBRARIES = libomxmycodec.la

libomxmycodec_la_SOURCES = omx_mycodec_component.c library_entry_point.c omx_mycodec_component.h
libomxmycodec_la_LIBADD = $(OMXIL_LIBADD)
libomxmycodec_la_CFLAGS = $(OMXIL_CFLAGS)
libomxmycodec_la_LDFLAGS = $(OMXIL_LDFLAGS)
